scss/style.scss
/* ... */
/** NEWS SECTION **/
#news {
  min-height: 100vh;
  padding: 0 4rem;
  background-image: url("./../img/alps-austria-blue-sky-clouds-dark2.jpg");
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;
  color: $font-clr;

  /* Medium devices (tablets: 576px - 992px) */
  @media (min-width: $tablet-min) and (max-width: $tablet-max) {
    padding: 0 3.5rem 2rem 3.5rem;
  }

  /* Small devices (landscape phones: 575px) */
  @media (max-width: $phone-max) {
    padding: 0 1.5rem 2rem 1.5rem;
  }

  h2 {
    width: 90%;
    margin: auto;
    padding: 2rem 0.5rem 1.5rem 0.5rem;
    color: $heading-clr;

    /* Medium devices (tablets: 576px - 992px) */
    @media (min-width: $tablet-min) and (max-width: $tablet-max) {
      width: 100%;
      margin: 0;
    }

    /* Small devices (landscape phones: 575px) */
    @media (max-width: $phone-max) {
      width: 100%;
      margin: 0;
    }
  }

  .news-container {
    width: 90%;
    margin: auto;
    padding: 0.5rem;

    /* Medium devices (tablets: 576px - 992px) */
    @media (min-width: $tablet-min) and (max-width: $tablet-max) {
      width: 100%;
      margin: 0;
    }

    /* Small devices (landscape phones: 575px) */
    @media (max-width: $phone-max) {
      width: 100%;
      margin: 0;
    }

    .news-article {
      margin-bottom: 3rem;
      padding: 1rem 0.5rem;
      border-top: 1px solid $font-clr;
      border-bottom: 1px solid $font-clr;
      transition: all 0.4s ease-in;
      text-align: justify;

      &:hover {
        cursor: pointer;
        padding: 1rem;
        border: 1px solid $border-clr;
        background-color: $bg-clr;
      }

      .article-container {
        padding: 1rem 0;
        display: flex;

        /* Small devices (landscape phones: 575px) */
        @media (max-width: $phone-max) {
          padding: 1rem 0 0 0;
          flex-wrap: wrap;
        }

        .news-img {
          width: 15rem;
          height: 10rem;

          /* Medium devices (tablets: 576px - 992px) */
          @media (min-width: $tablet-min) and (max-width: $tablet-max) {
            width: 10rem;
            height: 7rem;
          }

          /* Small devices (landscape phones: 575px) */
          @media (max-width: $phone-max) {
            width: 100% !important;
            height: auto;
            padding: 0 0 1rem 0;
          }
        }

        .info-container {
          padding: 0 0 0 1rem;

          display: flex;
          flex-wrap: wrap;
          flex-direction: column;

          /* Small devices (landscape phones: 575px) */
          @media (max-width: $phone-max) {
            padding: 0;
          }

          h3 {
            margin: 0;

            /* Medium devices (tablets: 576px - 992px) */
            @media (min-width: $tablet-min) and (max-width: $tablet-max) {
              width: 100%;
              margin: 0;
              color: $heading-clr;
            }

            /* Small devices (landscape phones: 575px) */
            @media (max-width: $phone-max) {
              width: 100%;
              margin: 0;
            }
          }

          .author-and-time {
            /* margin: 0; */
            padding: 0.5rem 0 1rem 0;
            font-size: 0.7rem;
            font-style: italic;
          }

          .news-info {
            margin: 0;
            padding: 0 0 1rem 0;

            &::first-letter {
              font-size: 110%;
            }
          }
        }
      }

      .news-content {
        /* margin: 0;
        padding: 0 1rem; */
        max-height: 0;
        overflow: hidden;
        transition: max-height 0.2s ease-out;
        background-color: $bg-clr;

        p {
          padding-bottom: 1rem;
          /* text-indent: 2.2rem; */

          &::first-letter {
            font-size: 110%;
          }
        }
      }
    }
  }
}

/** GALLERY SECTION **/
#gallery {
  min-height: 100vh;
  padding: 0 4rem;
  background: url("./../img/gray-trail-rails-between-green-leaf-trees-2.jpg");
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;

  /* Medium devices (tablets: 576px - 992px) */
  @media (min-width: $tablet-min) and (max-width: $tablet-max) {
    padding: 0 3.5rem 2rem 3.5rem;
  }

  /* Small devices (landscape phones: 575px) */
  @media (max-width: $phone-max) {
    padding: 0 1.5rem 2rem 1.5rem;
  }

  h2 {
    width: 90%;
    margin: auto;
    padding: 2rem 0 1rem 0.5rem;
    color: $heading-clr;

    &::after {
      content: "";
      display: block;
      width: 1.5rem;
      height: 4px;
      background: $link-clr;
    }

    /* Medium devices (tablets: 576px - 992px) */
    @media (min-width: $tablet-min) and (max-width: $tablet-max) {
      width: 100%;
      margin: 0;
    }

    /* Small devices (landscape phones: 575px) */
    @media (max-width: $phone-max) {
      width: 100%;
      margin: 0;
    }
  }
  .img-gallery-container {
    width: 90%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    /* Medium devices (tablets: 576px - 992px) */
    @media (min-width: $tablet-min) and (max-width: $tablet-max) {
      width: 100%;
      margin: 0;
    }

    /* Small devices (landscape phones: 575px) */
    @media (max-width: $phone-max) {
      width: 100%;
      margin: 0;
    }

    .img-container {
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      max-width: 24.5%;

      /* Medium devices (tablets: 576px - 992px) */
      @media (min-width: $tablet-min) and (max-width: $tablet-max) {
        max-width: 45.5%;
      }

      /* Small devices (landscape phones: 575px) */
      @media (max-width: $phone-max) {
        max-width: 100%;
      }

      .img-item {
        padding: 1rem;
        width: 100%;
        height: auto;
        opacity: 0.9;
        transition: all 0.2s ease-in;

        &:hover {
          opacity: 1;
          transform: scale(1.05);
        }
      }
    }
  }
}
/* ... */

